fix dark mode code color

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -66,3 +66,5 @@ $exam-color: #F977B8;
 $block-text-color: #0C0A0E;
 $label-color: $grey-lt-000;
 $table-background-color: #232323;
+$code-color: #ffe9ec;
+$code-bg-color: #796366;
