--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -35,3 +35,5 @@ $exam-color: #D60A70;
 $block-text-color: #ffffff;
 $label-color: #717171;
 $table-background-color: #fdfdfd;
+$code-color: #c7254e;
+$code-bg-color: #f9f2f4;
