--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -261,8 +261,8 @@ code {
   padding: 0.2em 0.4em;
   border: none;
 
-  background-color: #f9f2f4 !important;
-  color: #c7254e !important;
+  background-color: $code-bg-color !important;
+  color: $code-color !important;
 }
 
 div.highlighter-rouge[overlay] {
